--- a/dockerplace/templates/desktop.html
+++ b/dockerplace/templates/desktop.html
@@ -43,10 +43,10 @@
 
       </div>
       <div class="row">
-{% for service in services.iteritems() %}
+{% for service in services %}
         <div class="one-half column value">
-          <h2 class="value-multiplier">{{service[0]}}</h2>
-           <img class="service-icon" src="{{ service[1]["image"] }}" />
+          <h2 class="value-multiplier">{{ service["name"] }}</h2>
+           <img class="service-icon" src="{{ service["image"] }}" />
            {% for action in service["actions"] %}
            <a href="/service/action?a={{action}}" class="button" ><h5 class="value-heading">{{action}}</h5> </a>
            {% endfor %}
