--- a/dockerplace/templates/desktop.html
+++ b/dockerplace/templates/desktop.html
@@ -29,7 +29,7 @@
           <h2 class="value-multiplier">{{ service["name"] }}</h2>
            <img class="service-icon" src="{{ service["image"] }}" />
            {% for action in service["actions"] %}
-           <a href="/service/action?a={{action}}" class="button" ><h5 class="value-heading">{{action}}</h5> </a>
+           <a href="/service/action?a={{ action }}&s={{ service["name"] }}" class="button" ><h5 class="value-heading">{{action}}</h5> </a>
            {% endfor %}
            <p>{{service}}</p>
         </div>
