fixed issue with window on new tab

--- a/dockerplace/templates/console.html
+++ b/dockerplace/templates/console.html
@@ -25,10 +25,10 @@
       </div> <!-- row -->
       <div class="row">
         <div class="one-third column value">
-          <a target="_blank" href="/desktop" class="button" ><h5 class="value-heading">Back to desktop</h5> </a>
+          <a href="/desktop" class="button" ><h5 class="value-heading">Back to desktop</h5> </a>
         </div>
         <div class="one-third column value">
-          <a href="http://localhost:9000/#/containers" class="button" ><h5 class="value-heading">To docker.ui</h5> </a>
+          <a target="_blank" href="http://localhost:9000/#/containers" class="button" ><h5 class="value-heading">To docker.ui</h5> </a>
         </div>
       </div> <!-- row -->
       <div class="row">
