adding new icon as favicon.png; deleted hello.html

--- a/dockerplace/templates/common_header.html
+++ b/dockerplace/templates/common_header.html
@@ -1,6 +1,13 @@
 
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="/static/favicon.png" />
+
+  
+  <!-- Basic details
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="description" content="My dockerplace is a desktop-feeling container management app in a browser">
+  <meta name="author" content="github.com/wakaru44">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
