--- a/dockerplace/templates/page_not_found.html
+++ b/dockerplace/templates/page_not_found.html
@@ -1,1 +1,14 @@
-Wrong request m9
+<!DOCTYPE html>
+<head>
+    <title>Bullshit</title>
+
+    {% include "common_header.html" %}
+
+
+</head>
+<body>
+    <h1>Congrats, I can't find the page</h1>
+    <p>go <a href="/desktop">Here</a> and stop doing the monkey</p>
+
+</body>
+</html>
