--- a/dockerplace/templates/index.html
+++ b/dockerplace/templates/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <head>
     <title>Hello visitor</title>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
+    {% include "common_header.html" %}
+
+
 </head>
 <body>
     <h1>Welcome to your DockerPlace</h1>
